# swh-fuse

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  requirements-hpc.txt  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
benchmark/: README.md  bench.py  bench.sh  join_fuselog_to_benchCSV.py  origins_to_directories.py  python_sloc.py  releases_to_directories_viagrpc.py  results.ods
benchmark/2025-03-05-direct graph objstorage/: pythonSLOC-complete.ods  scancode_complete.ods
benchmark/2025-06-20-2000 workers/: 2025-06-20-bench2-take1.ipynb  2025-06-20-bench2-take2.ipynb
benchmark/2025-06-26-2000 workers, correctly/: hyply200.ipynb  scancode200.ipynb
benchmark/bench_2025-04-10/: hyply-50times-complete.ods  pythonSLOC-50times-complete.ods  scancode-50times-complete.ods
benchmark/bench_2025-04-14_nocache/: hyply-50times-complete.ods  pythonSLOC-50times-complete.ods  scancode-50times-complete.ods
debian/: control  rules
docs/: Makefile  Makefile.local  README.rst  cli.rst  configuration.rst  design.md  index.rst  parallelization.rst  tutorial.md  tutorial.rst
docs/images/: Makefile  arch-container.puml  arch-context.puml
docs/images/c4-plantuml/: C4_Container.puml
examples/: parallel_processing.py  parallel_processor.py
swh/foo/: cli.py
swh/fuse/: __init__.py  cache.py  cli.py  fuse.py
swh/fuse/backends/: __init__.py  compressed.py  graph.py  objstorage.py  web_api.py
swh/fuse/fs/: artifact.py  entry.py  mountpoint.py  symlink.py
swh/fuse/tests/: api_data.py  api_url.py  common.py  conftest.py  gen-api-data.py  test_cache.py  test_cli.py  test_content.py  test_directory.py  test_meta.py  test_mountpoint.py  test_origin.py  test_release.py  test_revision.py  test_snapshot.py
swh/fuse/tests/data/: api_data.py  config.py  gen-api-data.py
swh/fuse/tests/graph/: __init__.py  conftest.py  test_content.py  test_directory.py  test_origin.py  test_release.py  test_revision.py  test_snapshot.py
swh/fuse/tests/tools/: swh_fuse_context.py
swh/fuse/tests/web_api/: api_url.py  common.py  conftest.py  test_cache.py  test_cli.py  test_content.py  test_directory.py  test_meta.py  test_mountpoint.py  test_origin.py  test_release.py  test_revision.py  test_snapshot.py  test_unusual.py  unusual_data.py
swh/fuse/tests/web_api/data/: api_data.py  config.py  gen-api-data.py
